<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_rotation_category"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="auto_rotate"
            android:title="@string/pref_auto_rotate"
            android:summary="@string/pref_auto_rotate_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <Preference
            android:key="rotate_now"
            android:title="@string/pref_rotate_now"
            android:summary="@string/pref_rotate_now_summary"
            app:iconSpaceReserved="false"/>

        <ListPreference
            android:key="apply_target"
            android:title="@string/pref_apply_target_title"
            android:defaultValue="both"
            android:entries="@array/apply_target_entries"
            android:entryValues="@array/apply_target_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            android:key="rotation_constraints"
            android:title="@string/pref_rotation_constraints"
            android:summary="@string/pref_rotation_constraints_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_about_category"
        app:iconSpaceReserved="false">

        <Preference
            android:key="version"
            android:title="@string/pref_version"
            android:summary="1.0.0"
            android:selectable="false"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_debug_category"
        app:iconSpaceReserved="false">

        <Preference
            android:key="wallpaper_last_apply_status"
            android:title="@string/pref_last_apply_status"
            android:summary="@string/pref_last_apply_status_none"
            android:selectable="false"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>
